2017-05-16  Ian Bolton  <ian.bolton@embecosm.com>

	* README.md: Updated the GDB example session section.
	* server/Cpu.cpp: Bring step function in line with what GDB expects, to
	execute a single instruction rather than just one clock step.
	* server/Cpu.h: Add clock_step function.

2017-05-16  Ian Bolton  <ian.bolton@embecosm.com>

	* README.md: Added example GDB session instructions.

2017-05-16  Ian Bolton  <ian.bolton@embecosm.com>

	* server/Cpu.cpp: Write PC for each step while in reset, so that it is set
	in the model once out of reset.
	* server/GdbServer.cpp: Print out when we are writing PC and then read the
	value back to confirm it was written.
	* server/main.cpp: Cycling during reset has been deferred until we attempt
	to write PC. 

2017-05-15  Ian Bolton  <ian.bolton@embecosm.com>

	* server/Cpu.cpp: Detect inReset and trap situations and return bool from step.
	* server/Cpu.h: Add inReset and haveTrap, and return bool from step.
	* server/GdbServer.cpp: Handle 32-bit breakpoint instructions correctly.
	* server/GdbServer.h: Correct BREAK_INSTR to EBREAK instruction pattern.
	* server/MpHash.cpp: Correct instructions to be 32-bits.
	* server/MpHash.h: Likewise.
	* server/main.cpp: Cycle until CPU no longer in reset. Remove redundant command line arguments.

2017-05-15  Ian Bolton  <ian.bolton@embecosm.com>

	* server/Cpu.cpp: Fix spelling mistake in comment.
	* server/Cpu.h: Likewise.
	* server/GdbServer.cpp: Likewise.
	* server/GdbServer.h: Likewise.
	* server/main.cpp: Likewise.

2017-05-15  Ian Bolton  <ian.bolton@embecosm.com>

	* server/Cpu.cpp: Call into readReg, writeReg within CPU correctly.
	* server/GdbServer.cpp: Continue should step without reporting exception.

2017-05-15  Ian Bolton  <ian.bolton@embecosm.com>

	* server/GdbServer.cpp: Corrected RISCV_PC_REGNUM to be 32.

2017-05-15  Ian Bolton  <ian.bolton@embecosm.com>

	* README.md: Add -g flag to CXXFLAGS in example configure command.